src-tauri/error_log_3.txt
    Checking mineserver v0.1.0 (C:\Users\Pc\IdeaProjects\monetizemo\Mineserver\src-tauri)
warning: unused import: `std::fs`
 --> src\commands\runner.rs:8:5
  |
8 | use std::fs;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Cursor`
 --> src\commands\world_manager.rs:3:28
  |
3 | use std::io::{Read, Write, Cursor};
  |                            ^^^^^^

warning: unused import: `serde_json::Value`
 --> src\commands\plugins.rs:5:5
  |
5 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `State`
 --> src\scheduler.rs:1:42
  |
1 | use tauri::{AppHandle, Emitter, Manager, State};
  |                                          ^^^^^

warning: unused import: `ScheduledTask`
 --> src\scheduler.rs:5:58
  |
5 | use crate::commands::backup::{load_scheduled_tasks_sync, ScheduledTask, save_scheduled_tasks, create_backup};
  |                                                          ^^^^^^^^^^^^^

warning: unused import: `Write`
 --> src\commands\world_manager.rs:3:21
  |
3 | use std::io::{Read, Write, Cursor};
  |                     ^^^^^

warning: unused variable: `app_handle`
  --> src\commands\downloader.rs:68:5
   |
68 |     app_handle: tauri::AppHandle,
   |     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_app_handle`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\commands\network_manager.rs:157:9
    |
157 |     let mut tunnels = state.tunnels.lock().map_err(|e| e.to_string())?;
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `e`
   --> src\commands\network_manager.rs:405:21
    |
405 |                 Err(e) => {
    |                     ^ help: if this is intentional, prefix it with an underscore: `_e`

warning: unused variable: `id`
   --> src\commands\network_manager.rs:505:31
    |
505 | pub async fn set_tunnel_guard(id: String, port: u16, enabled: bool) -> Result<String, String> {
    |                               ^^ help: if this is intentional, prefix it with an underscore: `_id`

error[E0597]: `state_proc` does not live long enough
   --> src\scheduler.rs:103:66
    |
 94 | ...                       let state_proc = app_handle.state::<ServerProcessState>();
    |                               ---------- binding `state_proc` declared here
...
103 | ...                       if let Ok(configs) = state_proc.configs.lock() {
    |                                                ^^^^^^^^^^---------------
    |                                                |
    |                                                borrowed value does not live long enough
    |                                                a temporary with access to the borrow is created here ...
...
130 | ...                   },
    |                       -
    |                       |
    |                       `state_proc` dropped here while still borrowed
    |                       ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Result<std::sync::MutexGuard<'_, HashMap<std::string::String, ServerConfig>>, PoisonError<std::sync::MutexGuard<'_, HashMap<std::string::String, ServerConfig>>>>`
    |
help: consider adding semicolon after the expression so its temporaries are dropped sooner, before the local variables declared by the block are dropped
    |
129 |                                             };
    |                                              +

warning: unused variable: `task_id`
  --> src\scheduler.rs:58:37
   |
58 | ...                   let task_id = task.id.clone();
   |                           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_task_id`

warning: unused variable: `dom`
   --> src\scheduler.rs:157:21
    |
157 |     let (min, hour, dom, month, dow) = (parts[0], parts[1], parts[2], parts[3], parts[4]);
    |                     ^^^ help: if this is intentional, prefix it with an underscore: `_dom`

warning: unused variable: `month`
   --> src\scheduler.rs:157:26
    |
157 |     let (min, hour, dom, month, dow) = (parts[0], parts[1], parts[2], parts[3], parts[4]);
    |                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_month`

warning: unused variable: `dow`
   --> src\scheduler.rs:157:33
    |
157 |     let (min, hour, dom, month, dow) = (parts[0], parts[1], parts[2], parts[3], parts[4]);
    |                                 ^^^ help: if this is intentional, prefix it with an underscore: `_dow`

For more information about this error, try `rustc --explain E0597`.
warning: `mineserver` (lib) generated 14 warnings
error: could not compile `mineserver` (lib) due to 1 previous error; 14 warnings emitted
